GUI Improvements in Pharmacy Issue

--- a/src/main/webapp/pharmacy/pharmacy_item_master.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_item_master.xhtml
@@ -74,8 +74,8 @@
                                         <p:inputText autocomplete="off" id="txtName"  value="#{ampController.current.name}" styleClass="longText"  />
                                         <h:outputText value="" ></h:outputText>
 
-                                        <h:outputText  value="Code" ></h:outputText>
-                                        <p:inputText id="code" autocomplete="off"  value="#{ampController.current.code}" disabled="true" ></p:inputText>
+                                        <h:outputText  value="Code1" ></h:outputText>
+                                        <p:inputText id="code" autocomplete="off"  value="#{ampController.current.code}" ></p:inputText>
                                         <h:outputText value="" ></h:outputText>
 
                                         <h:outputText  value="Department Type" ></h:outputText>
