Pharmacy Import Error Corrections

--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
@@ -69,6 +69,12 @@
                                                                    #{commonController.currentDateTime > i.itemBatch.dateOfExpire ?'color: red; ': 
                                                                      commonController.dateAfterThreeMonthsCurrentDateTime > i.itemBatch.dateOfExpire ?'color: red; background-color: yellow;':''}"></h:outputLabel>
                                                 </p:column>
+                                                 <p:column headerText="Name">
+                                                    <h:outputLabel value="#{i.itemBatch.item.sname}" style="width: 50px!important;"></h:outputLabel>
+                                                </p:column>
+                                                <p:column headerText="Name">
+                                                    <h:outputLabel value="#{i.itemBatch.item.tname}" style="width: 50px!important;"></h:outputLabel>
+                                                </p:column>
                                                 <p:column headerText="Code">
                                                     <h:outputLabel value="#{i.itemBatch.item.code}" style="width: 50px!important;"></h:outputLabel>
                                                 </p:column>
