Pharmacy Import Error Corrections

--- a/src/main/webapp/pharmacy/pharmacy_item_master.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_item_master.xhtml
@@ -74,7 +74,7 @@
                                         <p:inputText autocomplete="off" id="txtName"  value="#{ampController.current.name}" styleClass="longText"  />
                                         <h:outputText value="" ></h:outputText>
 
-                                        <h:outputText  value="Code1" ></h:outputText>
+                                        <h:outputText  value="Code" ></h:outputText>
                                         <p:inputText id="code" autocomplete="off"  value="#{ampController.current.code}" ></p:inputText>
                                         <h:outputText value="" ></h:outputText>
 
