--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
@@ -45,6 +45,7 @@
                                     <h:outputLabel value="Pharmacy Retail Bill(Sale 1)" />
                                 </f:facet>
                                 <h:panelGrid columns="1" >
+
                                     <h:panelGrid columns="6" >
                                         <h:panelGrid columns="1" >
                                             <p:outputLabel value="Medicines/Devices" ></p:outputLabel>
@@ -60,10 +61,6 @@
                                                             completeMethod="#{pharmacySaleController.completeAvailableStocksFromNameOrGeneric}" 
                                                             var="i" itemLabel="#{i.itemBatch.item.name}" itemValue="#{i}" 
                                                             >
-                                                <p:column headerText="Id">
-                                                    <h:outputLabel value="#{i.itemBatch.item.id}"  style="width: 50px!important;"></h:outputLabel>
-                                                </p:column>
-
                                                 <p:column headerText="Item">
                                                     <h:outputLabel value="#{i.itemBatch.item.name}"  style="width: 300px!important;
                                                                    #{commonController.currentDateTime > i.itemBatch.dateOfExpire ?'color: red; ': 
@@ -97,8 +94,6 @@
                                                 <p:ajax event="itemSelect"   listener="#{pharmacySaleController.handleSelect}"  update="txtQty txtRate focusQty :#{p:component('lstReplaceableBatch')}" ></p:ajax>
                                                 <p:ajax event="query" update=":#{p:component('tabI')}" process="acStock"></p:ajax>
                                             </p:autoComplete>
-
-
                                         </h:panelGrid>
 
                                         <h:panelGrid columns="1" >
@@ -175,8 +170,6 @@
                                                 <h:outputLabel value="#{bi.pharmaceuticalBillItem.itemBatch.dateOfExpire}" >
                                                     <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
                                                 </h:outputLabel>
-
-
 
                                             </p:column>
                                             <p:column headerText="Remove">
@@ -354,7 +347,6 @@
 
 
                                 </f:facet>
-
                                 <p:panelGrid columns="2">
                                     <p:outputLabel value="Referring Doctor" ></p:outputLabel>
                                     <p:autoComplete forceSelection="true" id="cmbDoc" value="#{pharmacySaleController.preBill.referredBy}" 
@@ -369,7 +361,6 @@
 
 
                                 </p:panelGrid>
-
 
 
                                 <p:panel header="Bill Details" id="pBillDetails"  >
@@ -407,7 +398,9 @@
                                         <p:tab id="tabNewPt" title="New Patient"  >
                                             <bil:newPatient controller="#{pharmacySaleController}"/>
                                         </p:tab>
+
                                         <p:tab id="tabSearchPt" title="Search Patient" >
+
                                             <p:selectBooleanCheckbox value="#{patientController.reportKeyWord.additionalDetails}" 
                                                                      itemLabel="Serch Only Registed Patient" >
                                                 <f:ajax execute="@this" render="acPt" />
@@ -447,11 +440,11 @@
                                                         <f:convertDateTime pattern="dd MMMM yyyy"/>
                                                     </h:outputLabel>
                                                 </p:column>
-                                                <p:ajax event="itemSelect" process="@this" update=":#{p:component('cmbPs')} :#{p:component('cmbPs2')} :#{p:component('pBillDetails')} panSearch"
-                                                        listener="#{pharmacySaleController.searchPatientListener}"/>
+                                                <p:ajax event="itemSelect" process="@this" update=":#{p:component('cmbPs')} :#{p:component('pBillDetails')} panSearch"
+                                                        listener="#{pharmacySaleController2.searchPatientListener}"/>
                                             </p:autoComplete>  
                                             <h:panelGroup id="panSearch">
-                                                <pat:searchPatientDetail patient="#{pharmacySaleController.searchedPatient}"  />
+                                                <pat:searchPatientDetail patient="#{pharmacySaleController2.searchedPatient}"  />
                                             </h:panelGroup>
                                             <div style="padding: 2px; margin: 2px; border: 1px solid;">
                                                 <p:outputLabel value="#{pharmacySaleController.opdEncounterComments}" ></p:outputLabel>
@@ -481,7 +474,7 @@
                                                 <p:outputLabel value="Staff Member" ></p:outputLabel>
                                                 <p:autoComplete  style="width: 400px;" 
                                                                  forceSelection="true" 
-                                                                 value="#{pharmacySaleController.toStaff}" 
+                                                                 value="#{pharmacySaleController2.toStaff}" 
                                                                  id="scStaff"
                                                                  completeMethod="#{staffController.completeStaff}" 
                                                                  var="mys" 
@@ -577,11 +570,11 @@
                             </h:panelGroup>
 
                             <h:panelGroup id="gpBillPreviewDouble" rendered="#{sessionController.loggedPreference.pharmacyBillPaperType eq 'PosPaper'}"> 
-                                <div >
+                        <div >
                                     <h:panelGroup     rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha eq true}"> 
                                         <phi:saleBill_prabodha bill="#{pharmacySaleController.printBill}"></phi:saleBill_prabodha>
-                                    </h:panelGroup>
-                                </div>
+                            </h:panelGroup>
+                        </div>
                             </h:panelGroup>
 
                             <h:panelGroup id="gpBillPreviewFiveFive" rendered="#{sessionController.loggedPreference.pharmacyBillPaperType eq 'FiveFivePaper'}"> 
