--- a/src/main/webapp/opd_search_bill_own.xhtml
+++ b/src/main/webapp/opd_search_bill_own.xhtml
@@ -68,9 +68,10 @@
                         <p:dataTable rowIndexVar="i" id="tblBills" value="#{searchController.bills}" 
                                      var="bill"  
                                      style="min-width: 100%;"  
+                                     rows ="10"
                                      paginator="true"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rowsPerPageTemplate="5,10,15"
+                                     rowsPerPageTemplate="5,10,25,50"
                                      >
                             <p:column headerText="No" styleClass="alignTop" width="15">
                                 <h:outputLabel value="#{i+1}"/>
