--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_1.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_1.xhtml
@@ -528,7 +528,7 @@
 
                         <p:commandButton id="nullButton3" value="No Action"
                                          action="#" style="display: none;" ></p:commandButton>
-                        <p:defaultCommand  target="btnPrint" />  
+                        <!--<p:defaultCommand  target="btnPrint" />-->  
 
                         <div class="nonPrintBlock" >
                             <p:commandButton accesskey="p" id="btnPrint" value="Print" ajax="false" action="#" >
