--- a/src/main/webapp/pharmacy/pharmacy_grn.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_grn.xhtml
@@ -225,9 +225,9 @@
                         <ph:grn bill="#{grnController.grnBill}"/>
                     </h:panelGroup>
                     
-                    <h:panelGroup rendered="#{sessionController.loggedPreference.grnBillDetailed eq true}" >
+<!--                    <h:panelGroup rendered="#{sessionController.loggedPreference.grnBillDetailed eq true}" >
                         <ph:grn_detail bill="#{grnController.grnBill}"/>
-                    </h:panelGroup>
+                    </h:panelGroup>-->
                     
 
                 </p:panel>
