--- a/src/main/webapp/reportLab/lab_summeries_index.xhtml
+++ b/src/main/webapp/reportLab/lab_summeries_index.xhtml
@@ -88,6 +88,7 @@
                              <p:tab title="Clinical" >
                                 <p:panelGrid columns="1" styleClass="alignTop">
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Test Results - Single" action="test_results_single"/> 
+                                 <p:commandButton styleClass="linkButton" ajax="false" value="Test Results" action="/lab/clinical_result_values"/> 
                                 
                                 </p:panelGrid>
                             </p:tab>
