--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -71,8 +71,8 @@
                         <p:column style="text-wrap: avoid; text-overflow: clip; white-space: nowrap;">
                             <h:outputText id="lblConName" value="#{mys.person.nameWithTitle}" />
                             <p:tooltip for="lblConName" value="#{mys.person.nameWithTitle}" rendered="#{sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}" 
-                                          showDelay="0" hideDelay="0" 
-                                           ></p:tooltip>
+                                       showDelay="0" hideDelay="0" 
+                                       ></p:tooltip>
                         </p:column>
                         <p:ajax  event="rowSelect" 
                                  process="@this" 
@@ -588,49 +588,12 @@
                             <f:convertNumber pattern="#,##0.00" />
                         </p:outputLabel>
 
-                         
+
 
                         <h:panelGroup id="panelAddedBillPrint" styleClass="noBorder" rendered="#{channelBillController.settleSucessFully}" >
-
-
-                            <div>
-                                <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'Paper24_2x9_3'}">
-                                    <ch:channelRecipt_24_2x9_3 bill="#{channelBillController.printingBill}" dup="false"/>
-                                </h:panelGroup>
-                            </div>
-                            <div>
-                                <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'FiveFivePaper' and sessionController.loggedPreference.applicationInstitution eq 'Ruhuna'}" >
-                                    <ch:channelRecipt_ruhunu_new bill="#{channelBillController.printingBill}" dup="false" hos="true"/>
-                                    <ch:channelRecipt_ruhunu_new bill="#{channelBillController.printingBill}" dup="false" doc="true"/>
-                                    <!--<ch:channelRecipt_ruhunu bill="#{channelBillController.printingBill}" dup="false"/>-->
-                                </h:panelGroup>
-                            </div>
                             <div >
-
-                                <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'FiveFivePaper' and sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
-                                    <h:panelGroup rendered="#{!sessionController.loggedPreference.pharmacyBillPrabodha}" >
-                                        <ch:channelRecipt bill="#{channelBillController.printingBill}" dup="false"/>
-<!--                                        <ch:channelRecipt bill="#{channelBillController.printingBill}" dup="false"/>-->
-                                    </h:panelGroup>
-                                </h:panelGroup>
+                                <ch:channelRecipt bill="#{channelBillController.printingBill}" dup="false"/>
                             </div>
-                            <div >
-                                <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'PosPaper'}">
-                                    <h:panelGroup rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha}" > 
-                                        <ch:channelReciptPosDouble bill="#{channelBillController.printingBill}" dup="false"/>
-                                    </h:panelGroup>
-
-                                    <h:panelGroup rendered="#{!sessionController.loggedPreference.pharmacyBillPrabodha and !(sessionController.loggedPreference.applicationInstitution eq 'Cooperative')}" >
-                                        <ch:channelReciptPos bill="#{channelBillController.printingBill}" dup="false"/>
-                                    </h:panelGroup>
-
-                                    <h:panelGroup rendered="#{sessionController.loggedPreference.applicationInstitution eq 'Cooperative'}" >
-                                        <ch:channelReciptPos_coop bill="#{channelBillController.printingBill}" dup="false"/>
-                                    </h:panelGroup>
-
-                                </h:panelGroup>
-                            </div>
-
                         </h:panelGroup>
 
                         <h:panelGroup  styleClass="noBorder" rendered="#{!channelBillController.settleSucessFully}" >
@@ -894,7 +857,7 @@
 
                         </p:tab>
 
-                        <p:tab title="Reprint" id="rePrint"
+                        <p:tab title="REPRINT" id="rePrint"
                                rendered="#{webUserController.hasPrivilege('ChannelBookingReprint') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
 
                             <h:commandButton value="Print" actionListener="#{channelBillController.updatePrintStatus}"
@@ -912,53 +875,8 @@
 
                             <div style="width: 780px!important;height: 330px!important;overflow:scroll!important;" >
                                 <h:panelGroup id="panelAddedBillPrintRe" styleClass="noBorder" >
-                                <!--#{sessionController.loggedPreference.channelBillPaperType}-#{sessionController.loggedPreference.applicationInstitution}-->
-
-                                    <div>
-                                        <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'Paper24_2x9_3'}">#{sessionController.loggedPreference}-#{sessionController.loggedPreference.channelBillPaperType}-#{sessionController.loggedPreference.applicationInstitution}
-                                            <ch:channelRecipt_24_2x9_3 bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>                                        
-                                        </h:panelGroup>
-                                    </div>
-                                    <div>
-                                        <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'FiveFivePaper' and sessionController.loggedPreference.applicationInstitution eq 'Ruhuna'}" >
-                                            <ch:channelRecipt_ruhunu_new bill="#{channelBillController.billSession.billItem.bill}" dup="true" hos="true" 
-                                                                         rendered="#{channelBillController.billSession.billItem.bill.printed eq true and channelBillController.billSession.billItem.bill.paymentMethod eq 'Agent'}"/>
-                                            <ch:channelRecipt_ruhunu_new bill="#{channelBillController.billSession.billItem.bill}" dup="true" doc="true" 
-                                                                         rendered="#{channelBillController.billSession.billItem.bill.printed eq true and channelBillController.billSession.billItem.bill.paymentMethod eq 'Agent'}"/>
-                                            <ch:channelRecipt_ruhunu_new bill="#{channelBillController.billSession.billItem.bill}" dup="false" hos="true" 
-                                                                         rendered="#{channelBillController.billSession.billItem.bill.printed ne true and channelBillController.billSession.billItem.bill.paymentMethod eq 'Agent'}"/>
-                                            <ch:channelRecipt_ruhunu_new bill="#{channelBillController.billSession.billItem.bill}" dup="false" doc="true" 
-                                                                         rendered="#{channelBillController.billSession.billItem.bill.printed ne true and channelBillController.billSession.billItem.bill.paymentMethod eq 'Agent'}"/>
-                                            <ch:channelRecipt_ruhunu_new bill="#{channelBillController.billSession.billItem.bill}" dup="true" hos="true" 
-                                                                         rendered="#{channelBillController.billSession.billItem.bill.paymentMethod ne 'Agent'}"/>
-                                            <ch:channelRecipt_ruhunu_new bill="#{channelBillController.billSession.billItem.bill}" dup="true" doc="true" 
-                                                                         rendered="#{channelBillController.billSession.billItem.bill.paymentMethod ne 'Agent'}"/>
-                                            <!--<ch:channelRecipt_ruhunu_1 bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>-->
-                                        </h:panelGroup>
-                                    </div>
                                     <div >
-                                        <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'FiveFivePaper' and sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
-                                            <h:panelGroup rendered="#{!sessionController.loggedPreference.pharmacyBillPrabodha}" > 
-                                                <ch:channelRecipt bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>
-    <!--                                            <ch:channelRecipt bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>-->
-                                            </h:panelGroup>
-                                        </h:panelGroup>
-                                    </div>
-                                    <div >
-                                        <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'PosPaper'}">
-                                            <h:panelGroup rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha}" > 
-                                                <ch:channelReciptPosDouble bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>
-                                            </h:panelGroup>
-
-                                            <h:panelGroup rendered="#{!sessionController.loggedPreference.pharmacyBillPrabodha and !(sessionController.loggedPreference.applicationInstitution eq 'Cooperative')}" >
-                                                <ch:channelReciptPos bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>
-                                            </h:panelGroup>
-
-                                            <h:panelGroup rendered="#{sessionController.loggedPreference.applicationInstitution eq 'Cooperative'}" >
-                                                <ch:channelReciptPos_coop bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
-                                            </h:panelGroup>
-
-                                        </h:panelGroup>
+                                        <ch:channelRecipt bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>
                                     </div>
                                 </h:panelGroup>
                             </div>
@@ -1150,39 +1068,7 @@
 
                                         <h:panelGroup id="panelAddedBillPrintSettle" styleClass="noBorder" rendered="#{channelBillController.settleSucessFully}">
                                             <div>
-                                                <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'Paper24_2x9_3'}">#{sessionController.loggedPreference}-#{sessionController.loggedPreference.channelBillPaperType}-#{sessionController.loggedPreference.applicationInstitution}
-                                                    <ch:channelRecipt_24_2x9_3 bill="#{channelBillController.printingBill}" dup="true"/>                                        
-                                                </h:panelGroup>
-                                            </div>
-                                            <div>
-                                                <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'FiveFivePaper' and sessionController.loggedPreference.applicationInstitution eq 'Ruhuna'}" >
-                                                    <ch:channelRecipt_ruhunu_new bill="#{channelBillController.printingBill}" dup="false" hos="true"/>
-                                                    <ch:channelRecipt_ruhunu_new bill="#{channelBillController.printingBill}" dup="false" doc="true"/>
-                                                </h:panelGroup>
-                                            </div>
-                                            <!--                                            <div >
-                                                                                            <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'FiveFivePaper'}">
-                                                                                                <h:panelGroup rendered="#{!sessionController.loggedPreference.pharmacyBillPrabodha}" > 
-                                                                                                    <ch:channelRecipt bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
-                                                                                                    <ch:channelRecipt bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
-                                                                                                </h:panelGroup>
-                                                                                            </h:panelGroup>
-                                                                                        </div>-->
-                                            <div >
-                                                <h:panelGroup rendered="#{sessionController.loggedPreference.channelBillPaperType eq 'PosPaper'}">
-                                                    <h:panelGroup rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha}" > 
-                                                        <ch:channelReciptPosDouble bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
-                                                    </h:panelGroup>
-
-                                                    <h:panelGroup rendered="#{!sessionController.loggedPreference.pharmacyBillPrabodha and !(sessionController.loggedPreference.applicationInstitution eq 'Cooperative')}" > 
-                                                        <ch:channelReciptPos bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
-                                                    </h:panelGroup>
-
-                                                    <h:panelGroup rendered="#{!sessionController.loggedPreference.pharmacyBillPrabodha and sessionController.loggedPreference.applicationInstitution eq 'Cooperative'}" >
-                                                        <ch:channelReciptPos_coop bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
-                                                    </h:panelGroup>
-
-                                                </h:panelGroup>
+                                                 <ch:channelRecipt bill="#{channelBillController.printingBill}" dup="false"/>
                                             </div>
                                         </h:panelGroup>
                                         <h:panelGroup  styleClass="noBorder" rendered="#{!channelBillController.settleSucessFully}" >
