With Payment Restrictions

--- a/src/main/webapp/reportLab/lab_summeries_index.xhtml
+++ b/src/main/webapp/reportLab/lab_summeries_index.xhtml
@@ -15,7 +15,7 @@
                                 <p:panelGrid columns="1" styleClass="alignTop">
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Investigation List" action="investigation_counts"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Bill List" action="/reportLab/bill_list"/> 
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="Client List" action="turn_over_time_bills"/> 
+                                    <p:commandButton styleClass="linkButton" ajax="false" value="Client List" action="/reportLab/client_list"/> 
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Sample List" action="/lab/patient_sample_list"/> 
                                     
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Average Turn Around Time" action="turn_over_time"/> 
