Solution Creation Started

--- a/src/main/webapp/analysis/index.xhtml
+++ b/src/main/webapp/analysis/index.xhtml
@@ -29,7 +29,7 @@
                             <p:outputLabel value="Item" ></p:outputLabel>
                             <p:autoComplete completeMethod="#{analysisController.completeBilledItems}"
                                             value="#{analysisController.item}"
-                                            var="i"
+                                            var="i" minQueryLength="4"
                                             itemLabel="#{i.name}"
                                             itemValue="#{i}" >
                             </p:autoComplete>
