--- a/src/main/webapp/inward/inward_bill_intrim.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim.xhtml
@@ -26,7 +26,7 @@
                         <p:commandButton ajax="false"  value="To Print Intrim Bill" action="#{bhtSummeryController.toPrintItrim()}" onclick="onSubmitButton();" />
 
                     </f:facet>
-                    <h:panelGrid columns="3" style="min-width: 100%;">
+                    <h:panelGrid columns="3" style="min-width: 100%;" styleClass="alignTop">
                         <p:panel header="BHT">
                             <p:autoComplete converter="admis" widgetVar="aPt" id="acPt" forceSelection="true" 
                                             value="#{bhtSummeryController.patientEncounter}"
