Can Edit BHT No

--- a/src/main/webapp/lab/investigation.xhtml
+++ b/src/main/webapp/lab/investigation.xhtml
@@ -44,7 +44,7 @@
 
                                             <h:panelGrid id="gpSelectText" >
                                                 <p:autoComplete id="acIx" value="#{investigationController.current}" 
-                                                                completeMethod="#{investigationController.completeInvestigationsOfSelectedInstitution}"
+                                                                completeMethod="#{investigationController.completeInvest}"
                                                                 var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" 
                                                                 placeholder="Search here ..." 
                                                                 size="10" maxResults="10">
