--- a/src/main/webapp/opd_bill.xhtml
+++ b/src/main/webapp/opd_bill.xhtml
@@ -282,7 +282,7 @@
 
                                                 <p:autoComplete widgetVar="aIx" id="acIx" forceSelection="true"
                                                                 value="#{billController.currentBillItem.item}" 
-                                                                completeMethod="#{itemController.completeOpdItemsByNamesAndCode}"
+                                                                completeMethod="#{itemController.completeOpdItems}"
                                                                 var="ix" itemLabel="#{ix.name}" itemValue="#{ix}"
                                                                 size="10"  style="width: 400px;" maxResults="10" >
                                                     <p:column style="max-width: 200px;" headerText="Name">
